--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loot-clone-react",
+  "name": "turnbased-nft-game-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
